syntax = "proto3";

package pos_protobuf;

import "pos/include/proto/handle.proto";

/*!
 *  \brief  binary format of POSHandle_cuBLAS_Context
 */
 message Bin_POSHandle_cuBLAS_Context {
    Bin_POSHandle base = 1;
}
